@@ -51,6 +51,7 @@ public class GwtInput implements Input {
 	boolean[] pressedKeys = new boolean[256];
 	boolean keyJustPressed = false;
 	boolean[] justPressedKeys = new boolean[256];
+	boolean[] justPressedButtons = new boolean[5];
 	InputProcessor processor;
 	char lastKeyCharPressed;
 	float keyRepeatTimer;
@@ -64,7 +65,12 @@ public class GwtInput implements Input {
 	}
 
 	void reset () {
-		justTouched = false;
+		if (justTouched) {
+			justTouched = false;
+			for (int i = 0; i < justPressedButtons.length; i++) {
+				justPressedButtons[i] = false;
+			}
+		}
 		if (keyJustPressed) {
 			keyJustPressed = false;
 			for (int i = 0; i < justPressedKeys.length; i++) {
@@ -174,6 +180,12 @@ public class GwtInput implements Input {
 	@Override
 	public boolean isButtonPressed (int button) {
 		return pressedButtons.contains(button) && touched[0];
+	}
+
+	@Override
+	public boolean isButtonJustPressed(int button) {
+		if(button < 0 || button >= justPressedButtons.length) return false;
+		return justPressedButtons[button];
 	}
 
 	@Override
@@ -532,6 +544,7 @@ public class GwtInput implements Input {
 			this.justTouched = true;
 			this.touched[0] = true;
 			this.pressedButtons.add(getButton(e.getButton()));
+			justPressedButtons[e.getButton()] = true;
 			this.deltaX[0] = 0;
 			this.deltaY[0] = 0;
 			if (isCursorCatched()) {
